# WordSage

./: .env  .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  README.md  linter.py  pyproject.toml
.github/workflows/: ci.yml
deploy/docker/: Dockerfile.celery_worker  Dockerfile.fastapi  Dockerfile.fastapi_v2  Dockerfile.flower  docker-compose.yml
deploy/docker/grafana/provisioning/dashboards-definitions/: fastapi-dashboard.json
deploy/k8s/base/: kustomization.yaml  wordsage-ns.yaml
deploy/k8s/base/configmaps/: grafana-dashboard-configmap.yaml  grafana-dashboard-definitions-configmap.yaml  grafana-datasource-configmap.yaml  prometheus-configmap.yaml  redis-configmap.yaml  wordsage-configmap.yaml
deploy/k8s/base/deployments/: grafana-deployment.yaml  prometheus-deployment.yaml  redis-deployment.yaml  redis-exporter-deployment.yaml  wordsage-celery-worker-deployment.yaml  wordsage-fastapi-deployment.yaml  wordsage-fastapi-deployment_v2.yaml  wordsage-flower-deployment.yaml
deploy/k8s/base/ingresses/: wordsage-fastapi-istio-ingress.yaml  wordsage-fastapi-nginx-ingress-canary.yaml
deploy/k8s/base/services/: wordsage-fastapi-service.yaml
deploy/k8s/base/volumes/: grafana-pv-pvc.yaml  wordsage-files-pv-pvc.yaml
deploy/k8s/overlays/dev/: kustomization.yaml
deploy/k8s/overlays/dev/configs/: prometheus.yaml
deploy/k8s/overlays/dev/configs/dashboards-definitions/: fastapi-dashboard.json  redis-dashboard.json
deploy/k8s/overlays/dev/patches/: wordsage-fastapi-deployment-patch.yaml
tests/: conftest.py  test_main.py
wordsage/: celery_app.py  celery_config.py  main.py  main_v2.py  tasks.py
wordsage/static/: index.html  script.js  style.css
