[tool.poetry]
name = "wordsage"
version = "0.1.0"
description = ""
authors = ["Mustafa Saadi <saadim@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = {extras = ["redis"], version = "^5.4.0"}
prometheus-client = "^0.20.0"

[tool.poetry.group.fastapi.dependencies]
fastapi = "^0.111.0"
uvicorn = "^0.30.1"

[tool.poetry.group.flower.dependencies]
flower = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pylint = "^3.2.3"

[tool.poetry.scripts]
lint = "pylint:run_pylint"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"